gerber2image add inclued and modify qrc

--- a/example/gerber2image/CMakeLists.txt
+++ b/example/gerber2image/CMakeLists.txt
@@ -1,3 +1,4 @@
+find_package(Qt5 COMPONENTS Core)
 set(CMAKE_AUTORCC ON)
 
 file(GLOB Source ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp ${CMAKE_CURRENT_SOURCE_DIR}/*.h)
